partially completed banking microservice

--- a/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BankingDbConnection": "Server=DIVINELOVE-2;Database=BankingDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
