--- a/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
+++ b/MicroRabbit/MicroRabbit.Banking.Domain/MicroRabbit.Banking.Domain.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="Event\" />
+    <Folder Include="EventHandlers\" />
+  </ItemGroup>
 
 </Project>
