Before refctoring bus using dependecy injection

--- a/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Server=DIVINELOVE-2;Database=TransferDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
